--- a/index.html
+++ b/index.html
@@ -458,15 +458,15 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Adress</h3>
                     <ul>
-                        <li>Lima - Peru</li>
-                        <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li> Nairobi- kenya</li>
+                       
+                        <li>123456789</li>
+                        <li>gmail@gmail.com</li>
                     </ul>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2020 Bedimcode. All right reserved</p>
+            <p class="footer__copy">&#169; 2022 kenedy. All right reserved</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
